--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <title>Jogo da Forca</title>
+  </head>
+  <body>
+    <h1>Jogo da forca</h1>
+    <h2>Digite no teclado uma letra e tente adivinhar qual o nome do Cavaleiro!</h2>
+    <div class="jogo-container">
+      <div class="forca-container">
+        
+      </div>
+
+      <div class="wrong-letters">
+        <h3>Letras erradas</h3>
+      </div>
+    </div>
+
+    <div class="secret-word-container"></div>
+
+    <div class="repeat-letter-alert">
+      Você já usou essa letra!
+    </div>
+
+    <div class="popup-container">
+      <div class="popup">
+        <h2 id="mensagem"></h2>
+        <button id="btn-jogar" onclick="reiniciarJogo()">
+          Jogar novamente
+        </button>
+      </div>
+    </div>
+
+    <script src="game.js"></script>
+  </body>
+</html>
