--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"> 
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <title>Jogo da Forca</title>
   </head>
   <body>
@@ -18,28 +21,27 @@
     <h2>Digite no teclado uma letra e tente adivinhar qual o nome do Cavaleiro!</h2>
     <div class="jogo-container">
       <div class="forca-container">
+        <input type="text" placeholder="Escolha sua letra">
+        <button id = "start">Start Game</button>
         
       </div>
+      <h1>Cavaleiro</h1> 
+      <p class="secret-word-container">  
+      </p>
 
       <div class="wrong-letters">
         <h3>Letras erradas</h3>
+        <span id = "wrong"></span>
       </div>
     </div>
 
-    <div class="secret-word-container"></div>
+ 
 
     <div class="repeat-letter-alert">
       Você já usou essa letra!
     </div>
 
-    <div class="popup-container">
-      <div class="popup">
-        <h2 id="mensagem"></h2>
-        <button id="btn-jogar" onclick="reiniciarJogo()">
-          Jogar novamente
-        </button>
-      </div>
-    </div>
+    
 
     <script src="game.js"></script>
   </body>
