--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="jogo-container">
       <div class="forca-container">
         <input type="text" placeholder="Escolha sua letra">
-        <button id = "start">Start Game</button>
+        <button id = "start">Inserir letra</button>
         
       </div>
       <h1>Cavaleiro</h1> 
@@ -33,13 +33,18 @@
         <h3>Letras erradas</h3>
         <span id = "wrong"></span>
       </div>
-    </div>
+
+      <div class="end-game">
+        <h3 id = "end-game-message"></h3>
+      </div>
+
+  </div>
 
  
 
-    <div class="repeat-letter-alert">
+    <!-- <div class="repeat-letter-alert">
       Você já usou essa letra!
-    </div>
+    </div> -->
 
     
 
