--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Jogo da Forca</title>
   </head>
   <body>
-    <h1>Jogo da forca</h1>
+    <h1>Adivinhe o Cavaleiro do Zodíaco</h1>
     <h2>Digite no teclado uma letra e tente adivinhar qual o nome do Cavaleiro!</h2>
     <div class="jogo-container">
         <input type="text" placeholder="Escolha sua letra">
