--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"> 
    
-    <title>Jogo da Forca</title>
+    <title>Adivinhe o Cavaleiro</title>
   </head>
   <body>
     <h1>Adivinhe o Cavaleiro do Zodíaco</h1>
